--- a/src/assets/css/home.scss
+++ b/src/assets/css/home.scss
@@ -3,7 +3,8 @@
     height: 100vh;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: start;
+    padding-top: 10vh;
     background-color: #f5f5f5;
     .search_card_box {
         width: 600px;
@@ -124,13 +125,16 @@ input:-webkit-autofill:hover {
 }
 
 .search_body_section {
-    padding: 10px 0px;
+    padding: 10px 0;
     ul {
+          max-height: 50vh;
+            overflow-y: auto;
         li {
             display: flex;
             align-items: center;
             gap: 12px;
             padding: 12px 20px;
+          
             border-bottom: 1px solid #e0e0e0;
             .user_details {
                 display: flex;
@@ -141,9 +145,7 @@ input:-webkit-autofill:hover {
             &:last-child {
                 border-bottom: none;
             }
-            &:hover {
-                background-color: #f9f9f9;
-            }
+
             .image_profile_frame {
                 width: 40px;
                 height: 40px;
@@ -163,12 +165,13 @@ input:-webkit-autofill:hover {
                     border: 2px solid white;
                     border-radius: 50%;
                     position: absolute;
-                    bottom: 0;
-                    right: 0;
+                    bottom: -1px;
+                    right: -1px;
                 }
             }
+
             .description_paragraph {
-                
+
                 h5 {
                     font-size: 16px;
                     font-weight: 600;
@@ -181,11 +184,12 @@ input:-webkit-autofill:hover {
                     font-weight: 500;
                 }
             }
+
             .action_button_frame {
 
-                display: flex;
+                display: none;
                 align-items: center;
-                gap: 8px;
+                gap: 1px;
                 .link_icon {
                     width: 32px;
                     height: 32px;
@@ -215,9 +219,15 @@ input:-webkit-autofill:hover {
                     cursor: pointer;
                     transition: all 0.3s ease;
                     &:hover {
-                        background-color: #e0e0e0;
+                        // background-color: #e0e0e0;
                         color: #000;
                     }
+                }
+            }
+            &:hover {
+                background-color: #f9f9f9;
+                .action_button_frame {
+                    display: flex;
                 }
             }
         }
