--- a/src/assets/css/home.scss
+++ b/src/assets/css/home.scss
@@ -13,6 +13,7 @@
         padding: 20px 0;
         box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
         border-radius: 20px;
+        transition: all 0.5s ease;
         .search_header_frame {
             width: 100%;
             height: 40px;
@@ -21,6 +22,14 @@
             align-items: center;
             padding: 0 20px;
             gap: 5px;
+            .search-icon {
+                width: 26px;
+                height: 26px;
+                min-width: 26px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
             input {
                 width: 100%;
                 height: 100%;
@@ -127,20 +136,42 @@ input:-webkit-autofill:hover {
 .search_body_section {
     padding: 10px 0;
     ul {
-          max-height: 50vh;
-            overflow-y: auto;
+        max-height: 50vh;
+        overflow-y: auto;
+        transition: all 0.5s ease;
+        &::-webkit-scrollbar{
+            appearance: none;
+            width: 8px;
+            
+        }
+        &::-webkit-scrollbar-thumb{
+            background-color: #e0e0e0;
+            border-radius: 8px;
+        }
         li {
             display: flex;
             align-items: center;
             gap: 12px;
             padding: 12px 20px;
-          
+
             border-bottom: 1px solid #e0e0e0;
             .user_details {
                 display: flex;
                 align-items: center;
                 gap: 12px;
                 width: 70%;
+                .profile_logo{
+                    width: 40px;
+                    height: 40px;
+                    min-width: 40px;
+                    border-radius: 6px;
+                    background-color: #f2f2f2;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    font-size: 16px;
+                    color: #828282;
+                }
             }
             &:last-child {
                 border-bottom: none;
